lucee migration complete - documentation updated